--- a/Index.html
+++ b/Index.html
@@ -1,57 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Instagram</title>
+    <title>Postcard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <h1>Breathe Code Photo Feed</h1>
-    </div>
-    <div class="main">
-        <div class="element">
-            <div class="elementHead">
-                <h2>My First Photo</h2>
-                <p>12/24</p>
+    <div id="bigOne">
+        <div id="headerPostcard">
+            <div id="titlePostcard">
+                <h1>My Postcard</h1>
             </div>
-            <div class="elementImg"><img src="https://images.unsplash.com/photo-1597287258070-5134decad9c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80" alt="spider"></div>
-            <div class="elementBody">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum earum incidunt tempore similique sint rem esse sunt voluptas magni, repudiandae ipsa ad sit molestiae, inventore, ratione consequatur et tempora ex?</p>
+            <div id="imgPostcard">
+                <img src="http://assets.breatheco.de/apis/img/icon/4geeks.png" alt="">
             </div>
         </div>
-        <div class="element">
-            <div class="elementHead">
-                <h2>My Second Photo</h2>
-                <p>12/24</p>
+        <div id="bodyPostcard">
+            <div id="infoPostcard">
+                <p>Look how awesome! This is a postcard that i created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+                <p>This is so cool, can't wait to start doing more stuff!</p>
             </div>
-            <div class="elementImg"><img src="https://images.unsplash.com/photo-1597453094738-a73e148a8bde?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80" alt="spider"></div>
-            <div class="elementBody">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum earum incidunt tempore similique sint rem esse sunt voluptas magni, repudiandae ipsa ad sit molestiae, inventore, ratione consequatur et tempora ex?</p>
-            </div>
-        </div>
-        <div class="element">
-            <div class="elementHead">
-                <h2>My Third Photo</h2>
-                <p>12/24</p>
-            </div>
-            <div class="elementImg"><img src="https://images.unsplash.com/photo-1597399400523-c84fe107928b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80" alt="spider"></div>
-            <div class="elementBody">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum earum incidunt tempore similique sint rem esse sunt voluptas magni, repudiandae ipsa ad sit molestiae, inventore, ratione consequatur et tempora ex?</p>
+            <div id="formPostcard">
+                    <form action="" method="GET">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <input type="text" placeholder="Comment">
+                    </form>
             </div>
         </div>
-        <div class="element">
-            <div class="elementHead">
-                <h2>My Fourth Photo</h2>
-                <p>12/24</p>
-            </div>
-            <div class="elementImg"><img src="https://images.unsplash.com/photo-1596385726087-cf3261c7cab6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80" alt="spider"></div>
-            <div class="elementBody">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum earum incidunt tempore similique sint rem esse sunt voluptas magni, repudiandae ipsa ad sit molestiae, inventore, ratione consequatur et tempora ex?</p>
-            </div>
+
+        <div id='btnPostcard'>
+            <button>Send My Postcard</button>
         </div>
     </div>
 </body>
-</html>
+</html></HTml>
